<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/col_custom_tour_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/tour_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/col_tour_category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        	<CheckBox
        	    android:id="@+id/col_category_all"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:onClick="onCheckboxClicked"
        	    android:text="@string/col_all" />
        	
        	<CheckBox
        	    android:id="@+id/col_category_cultural"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:onClick="onCheckboxClicked"
        	    android:text="@string/col_cultural" />
        	
        	<CheckBox
        	    android:id="@+id/col_category_eco"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:onClick="onCheckboxClicked"
        	    android:text="@string/col_eco" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/col_where"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/col_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/col_zone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/col_zone_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <Button
        android:id="@+id/custom_tour_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/col_pick_places" />

    <Button
        android:id="@+id/btn_give_tour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/col_give_me_tour" />
    
</LinearLayout>
